# MeganJohnsProject

./: README.md
.gitea/workflows/: client.yml  server.yml  version.yml
client/: .env.example  .gitignore  index.html  meganjohns.com.conf  package-lock.json  package.json  tsconfig.json
client/src/: Api.tsx  App.css  App.tsx  MjSection.tsx  index.css
client/src/About/: Homepage.tsx  ProfessionalServices.tsx
client/src/ArtworkSection/: ArtworkModal.tsx
client/src/Discography/: AlbumArtwork.tsx  AlbumModal.tsx
client/src/Discography/SourceList/: SourceItem.tsx  SourceList.tsx
client/src/Header/: Header.css  Header.tsx  NavList.tsx  Title.tsx
client/src/Header/SocialBanner/: SocialBanner.css  SocialBanner.tsx
client/src/MjCard/: MjCard.css  MjCard.tsx
client/src/Quotes/: Quote.tsx  Quotes.css  Quotes.tsx
client/src/Videos/: Videos.css  Videos.tsx
client/src/types/: Album.tsx  Artwork.tsx  Bio.tsx  MeganJohns.tsx  Quote.tsx  Video.tsx
server/: .env.example  .gitignore  api.meganjohns.com.conf  meganjohns.service  pyproject.toml
server/app/: main.py  origins.py
server/app/constants/: __init__.py
server/app/controller/: controller.py
server/app/db/: DDL.sql
server/app/model/: __init__.py  albums.py  articles.py  artwork.py  bio.py  model_object.py  quotes.py  response_object.py  video.py
server/app/routers/: albums.py  artwork.py  bio.py  quotes.py  videos.py
server/app/scripts/: bio.html  bump.py  run.py  seed.py
